--- a/simulation.html
+++ b/simulation.html
@@ -67,8 +67,7 @@
 				</li>
 				<ul class="sub-menu collapse" id="new">
 					<li class="option"><a href="javascript:saveData(getBodies());">Save Data</a></li>
-					<li class="option"><a>Copy Link</a></li>
-					<li class="option"><a>Copy Embed Code</a></li>
+					<li class="option"><a href="javascript:copyUrl()">Copy Link</a></li>
 				</ul>
 			</ul>
 		</div>
