Fixed file name issues in urls

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 			<p class="label">Computation</p>
 			<p class="label" style="left:56%;">Output</p>
 		
-			<a href="animations/Intro.html"><img src="images/keyboard.png", width="22%" style="right:53%;" class="zoom" /></a>
+			<a href="animations/intro.html"><img src="images/keyboard.png", width="22%" style="right:53%;" class="zoom" /></a>
 			
 			<img src="images/processor.png", id="processor", width="35%" style="left:0; right:0;" />
 			<a href="animations/Adder.html"><img src="images/plus.png", id="+", width="5%" style="right:4%" class="zoom" /></a>
-			<a href="animations/ANDMultiplier.html"><img src="images/times.png", id="x", width="5%" style="right:4%" class="zoom" /></a>
+			<a href="animations/andmultiplier.html"><img src="images/times.png", id="x", width="5%" style="right:4%" class="zoom" /></a>
 			<img src="images/minus.png", id="-", width="5%" style="right:-6%"  />
 			<img src="images/divide.png", id="divide", width="5%" style="right:-6%" />
 			
